# reusable-rdf-resources

./: Dockerfile  README.md  attribute-values.json  attributes.json  code-lists.json  dimensions.json  licenses.json  measures.json  organisations.json  quantity-kinds.json  themes.json  units.json
.devcontainer/: devcontainer.json
pipelines/organisations/: JenkinsFile  Jenkinsfile  README.md  organisations.csv  schema.json
rdf-definitions/attributes/: analyst-function-obs-marker.csv  analyst-function-obs-marker.csv-metadata.json  analyst-function-obs-marker.json  example_qube-config.jsonc  sdmx-obs-status.csv  sdmx-obs-status.json  statistical-concepts.ttl
rdf-definitions/concept-schemes/: CL_AGE_1.0_predefined_lists.xls  CL_SEX_v2.1.docx  dataset.ttl  greenhouse-gases-code-list.csv  greenhouse-gases-code-list.csv-metadata.json  greenhouse-gases-code-list.table.json  sex-code-list.csv-metadata.json  sex-code-list.table.json  sex.csv  standard-industrial-classification.csv  standard-industrial-classification.csv-metadata.json  standard-industrial-classification.table.json  standard-industrial-classification.ttl
rdf-definitions/dimensions/: age.csv  sex.csv  sex.csv-metadata.json
scripts/: README.md  main.py  our-graph.ttl  populate_ghg_codelist.py  populatejsonfiles.py  populateorganisations.py  pyproject.toml  temp
scripts/tests/unit/: test_populatejsonfiles.py
scripts/tests/unit/cassettes/: test_get_quantity_kind_url_successfully_retrieved.yaml  test_get_raises_httperror.yaml  test_get_unit_url_successfully_retrieved.yaml
(+10 files in other folders)
