[tool.poetry]
name = "RDF resource populator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"
requests = "^2.27.1"
black = "^22.3.0"
pytest = "^7.1.1"
pytest-recording = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
